cluster/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-keycloak-instance
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect : "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.lsc-sde.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: default-instance-service
            port: 
              name: http
  tls:
  - hosts:
    - keycloak.lsc-sde.local
    secretName: keycloak.lsc-sde.local-tls
